--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <body>
-        test test
+        <p>this is a paragraph that should be useful</p>
     </body>
 </html>
